--- a/Housemates/Housemates/Base.lproj/Main.storyboard
+++ b/Housemates/Housemates/Base.lproj/Main.storyboard
@@ -792,6 +792,7 @@
                         <outlet property="rulesView" destination="jxS-eH-27J" id="PAX-g8-MjP"/>
                         <segue destination="vi4-wc-3oq" kind="presentation" identifier="seguePickChore" id="Lx6-0z-wG7"/>
                         <segue destination="X2d-sq-7XE" kind="show" identifier="segueAllChore" id="hzr-n1-DjT"/>
+                        <segue destination="1UH-VR-mjj" kind="presentation" identifier="segueAddChores" id="k0I-aw-CJz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D6E-VS-Oiw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1186,7 +1187,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BzZ-Hj-VQx">
-                                <rect key="frame" x="333" y="20" width="61" height="31"/>
+                                <rect key="frame" x="333" y="20" width="73" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" red="0.26878321170000002" green="0.49023824929999998" blue="0.47787421940000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
@@ -1369,6 +1370,7 @@
                     </view>
                     <size key="freeformSize" width="414" height="1200"/>
                     <connections>
+                        <outlet property="addButton" destination="BzZ-Hj-VQx" id="zj3-LC-u7f"/>
                         <outlet property="assignTopView" destination="Ef5-F0-iur" id="VEf-sn-tog"/>
                         <outlet property="dateBottomView" destination="CUK-lG-Ce3" id="aEZ-zS-dSv"/>
                         <outlet property="dateButton" destination="ziR-nh-PRy" id="71m-X5-dA0"/>
@@ -1515,6 +1517,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Edit"/>
+                                <connections>
+                                    <action selector="onEdit:" destination="vi4-wc-3oq" eventType="touchUpInside" id="GOI-pv-3ge"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="xLm-pY-hPc"/>
@@ -1952,9 +1957,9 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="hzr-n1-DjT"/>
         <segue reference="bcU-2R-ZEG"/>
         <segue reference="Lx6-0z-wG7"/>
+        <segue reference="k0I-aw-CJz"/>
         <segue reference="qVs-VN-vV0"/>
     </inferredMetricsTieBreakers>
     <resources>
